tests/errors/module_variable_initializer_cycle.dang
# Direct module variable initializer cycles are rejected statically.
pub staticCycleA: String! = staticCycleB
pub staticCycleB: String! = staticCycleA
